* Fix dialog word wrap issue * Updated method for showing the popup

--- a/src/renderer/assets/style.css
+++ b/src/renderer/assets/style.css
@@ -597,6 +597,7 @@ input[type="checkbox"]:checked + label::after {
     margin-bottom: 5rem;
     line-height: 1.5rem;
     font-size: 1.2rem;
+    word-wrap: break-word;
 }
 
 dialog::backdrop {
